maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:68: error: type mismatch;
 found   : Unit
 required: Boolean
    if (murNord=true)
               ^